tests/rustdoc-ui/doctest/standalone-warning-2024.stderr
error: unknown attribute `standalone`
  --> $DIR/standalone-warning-2024.rs:10:1
   |
10 | / //! ```standalone
11 | | //! bla
12 | | //! ```
13 | | //!
14 | | //! ```standalone_crate
15 | | //! bla
16 | | //! ```
   | |_______^
   |
   = help: there is an attribute with a similar name: `standalone-crate`
   = help: the code block will either not be tested if not marked as a rust one or the code will be run as part of the merged doctests if compatible
note: the lint level is defined here
  --> $DIR/standalone-warning-2024.rs:8:9
   |
8  | #![deny(warnings)]
   |         ^^^^^^^^
   = note: `#[deny(rustdoc::invalid_codeblock_attributes)]` implied by `#[deny(warnings)]`

error: unknown attribute `standalone_crate`
  --> $DIR/standalone-warning-2024.rs:10:1
   |
10 | / //! ```standalone
11 | | //! bla
12 | | //! ```
13 | | //!
14 | | //! ```standalone_crate
15 | | //! bla
16 | | //! ```
   | |_______^
   |
   = help: there is an attribute with a similar name: `standalone-crate`
   = help: the code block will either not be tested if not marked as a rust one or the code will be run as part of the merged doctests if compatible

error: aborting due to 2 previous errors

